# OpencvTutorials

section2_BasicsOfOpenCV/lecture10-video-parser/: CMakeCache.txt  DisplayImageEXEC  Makefile  cmake_install.cmake  main.cpp
section2_BasicsOfOpenCV/lecture12-DataPersistence/: CMakeCache.txt  DisplayImageEXEC  Makefile  cmake_install.cmake  main.cpp
section2_BasicsOfOpenCV/lecture5/: CMakeList.txt
section2_BasicsOfOpenCV/lecture6_ManagingDependencies/: CMakeLists.txt
section2_BasicsOfOpenCV/lecture9/: main.cpp
section3-OpenCVUSer_and_basicUI/lecture13/: CMakeLists.txt  main.cpp
section3-OpenCVUSer_and_basicUI/lecture14-OpenCVguiQT/: CMakeCache.txt  DisplayImageEXEC  Makefile  cmake_install.cmake  main.cpp
section3-OpenCVUSer_and_basicUI/lecture15-Events/: CMakeLists.txt  main.cpp
section3-OpenCVUSer_and_basicUI/lecture16-addingButton/: CMakeCache.txt  DisplayImageEXEC  Makefile  cmake_install.cmake  main.cpp
section3-OpenCVUSer_and_basicUI/section17-OpenGLsupport/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
section4-DelvingIntoHistogramAndFilters/: main.cpp
